--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,112 +1,47 @@
-/*@media only screen and (max-width: 398px) {*/
-  .footer-style {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    right: 0px;
-    left: 0px;
-    bottom: 0px;
-    /*height: 50px;*/
-    padding: 2.5% 5% 2.5%;
-    /*padding-right: 5%;*/
-    /*width: 90%;*/
-    /*padding: 0px 0px 0px 0px;*/
-    margin: 0 auto;
-    color: #edeef0;
-    background-color: #0b0e19;
-    /*border-top: 1px solid #35df5c;*/
-    clip-path: polygon(0% 25%, 100% 0%, 100% 100%, 0% 100%);
-  }
+.footer-style {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5% 5% 2.5%;
+  color: #edeef0;
+  background-color: #0b0e19;
+  clip-path: polygon(0% 25%, 100% 0%, 100% 100%, 0% 100%);
+  font-size: 10px;
+}
 
-  .footer-style p {
-    /*display: flex;*/
-    /*width: 165px;*/
-    /*padding: 10px 0px 0px 10px;*/
-    /*margin: 0px 0px 0px 0px;*/
-    font-size: 10px;
-  }
+.footer-style p {
+  align-self: flex-end;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
 
-  .footer-style ul {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*width: 100px;*/
-    /*flex: 0 0 20%;*/
-    text-align: right;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    list-style: none;
-  }
+.footer-style ul {
+  text-align: right;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
-  .footer-style li {
-    /*display: flex;*/
-    /*justify-content: flex-end;*/
-  }
+.footer-style li img {
+  height: 12px;
+  width: 12px;
+  margin-left: 3px;
+  background-color: #edeef0;
+  border-radius: 5px;
+}
 
-  .footer-style li img {
-    height: 12px;
-    width: 12px;
-    margin-left: 3px;
-    background-color: #edeef0;
-    border-radius: 5px;
-  }
+.footer-style li a {
+  text-decoration: none;
+  color: #edeef0;
+}
 
-  .footer-style li a {
-    font-size: 10px;
-    text-decoration: none;
-    color: #edeef0;
-  }
-/*}*/
+.footer-style li a:hover {
+  text-decoration: underline;
+}
 
 @media only screen and (min-width: 398px) {
-  .footer-style {
-    /*position: relative;*/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*justify-content: space-between;*/
-    right: 0px;
-    left: 0px;
-    bottom: 0px;
-    /*height: 75px;*/
-    padding: 2.5% 5% 2.5%;
-    /*padding-right: 5%;*/
-    /*width: 90%;*/
-    /*padding: 0px;*/
-    margin: 0 auto;
-    color: #edeef0;
-    /*border-top: 1px solid #03A9F4;*/
-  }
-
-  .footer-style p {
-    /*display: flex;*/
-    /*padding: 10px 0px 0px 10px;*/
-    /*margin: 0px 0px 0px 0px;*/
-    /* border: 1px solid red; */
-  }
-
-  .footer-style ul {
-    padding: 10px 10px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    /* border: 1px solid red; */
-    /* list-style-type: none; */
-  }
-
-  .footer-style li {
-    /*display: flex;*/
-    /*justify-content: flex-end;*/
-  }
-
-  .footer-style li img {
-    height: 12px;
-    width: 12px;
-    margin-left: 3px;
-    background-color: #edeef0;
-    border-radius: 5px;
-  }
-
+  .footer-style p,
   .footer-style li a {
-    font-size: 12px;
-    text-decoration: none;
-    color: #edeef0;
+    font-size: calc(0.8rem + .5vw);
   }
 }
