--- a/src/components/styles/employees.css
+++ b/src/components/styles/employees.css
@@ -1,5 +1,7 @@
 .employees-wrapper {
-    height: 130vh;
+    position: relative;
+    top: 50px;
+    /*height: 130vh;*/
     color: #edeef0;
     background-color: #2b2d3d;
     padding: 5%;
