--- a/src/components/modals/styles/modal.css
+++ b/src/components/modals/styles/modal.css
@@ -9,6 +9,7 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.88);
+    z-index: 5;
 }
 
 /* provides the positioning context for the actual modal content */
