--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -102,7 +102,8 @@
 	white-space: nowrap;
 	margin: 0 0.5em;
 	padding: 1em;
-	border-bottom: 2px solid #b94343;
+	border-bottom: 1px solid #03A9F4;
+	margin-bottom: 20px;
 }
 .card-date {
 	background-color: #2b2d3d;
