--- a/src/components/styles/profile.css
+++ b/src/components/styles/profile.css
@@ -47,7 +47,7 @@
     padding: 2.5% 0 2.5% 0;
     font-size: 15px;
     text-transform: uppercase;
-    color: #6a77b6;
+    color: #98a0c9;
 }
 
 .profile-section p {
