--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/*
 .App {
   text-align: center;
 }
@@ -8,7 +9,6 @@
 }
 
 .App-header {
-  /*background-color: #222;*/
   height: 150px;
   padding: 20px;
   color: white;
@@ -118,3 +118,4 @@
     opacity: 1
   }
 }
+*/
