--- a/src/components/styles/card-list.css
+++ b/src/components/styles/card-list.css
@@ -4,6 +4,6 @@
 	margin: 0 auto;
 	list-style: none;
 	border-radius: 3px;
-	max-width: 50em;
-	overflow: hidden;
+	/*max-width: 50em;*/
+	/*overflow: hidden;*/
 }
