--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -1,24 +1,23 @@
-.dashboard {
-	position: relative;
-	top: 50px;
-	text-align: center;
-	margin: 0 auto;
-	background-color: #111525;
-	padding: 1% 5% 5% 5%;
+.dashboard-page {
+    padding: 5%;
+    color: #edeef0;
+    animation: fadein 0.8s;
 }
 
-.dashboard > h2 {
-	margin: 0;
+.dashboard-header > h2 {
 	text-align: left;
-	font-size: 2em;
-	color: #edeef0;
+    text-transform: uppercase;
+    font-size: 20px;
+    flex: 0 0 50%;
 }
 
 .dashboard-header {
-	margin: 0;
-	padding: 1.5% 2.5% 1.5% 2.5%;
-	text-align: center;
-	font-size: 20px;
+    display: flex;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0 5%;
+    border-bottom: 1px solid #03A9F4;
 }
 
 .section-header {
@@ -34,39 +33,40 @@
 
 .dashboard-section {
 	background-color: #2b2d3d;
+    padding-top: 2.5%;
 }
 
 .dashboard-header,
-.dashboard-section-header {
+.dashboard-section {
 	color: #edeef0;
-	background-color: #232633;
+	background-color: #0b0e19;;
 }
 
 .dashboard-section-header {
 	display: flex;
-	flex-direction: column;
+	/*flex-direction: column;*/
 	align-items: center;
 	margin-bottom: 0.25%;
-	padding: 1.5% 2.5% 1.5% 2.5%;
+	/*padding: 1.5% 2.5% 1.5% 2.5%;*/
+    flex: 0 0 50%;
+    justify-content: flex-end;
+
 }
 
 .super-filter-btn {
-  width: 14.5em;
-  border-radius: 5px;
   background: transparent;
   padding: 5px 10px;
-  margin-top: 5px;
-  border: 1px solid #35df5c;
+  margin-right: 10px;
+  border: none;
   color: #35df5c;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 20px;
   -webkit-transition-property: background,color;
   -o-transition-property: background,color;
   transition-property: background,color;
   -webkit-transition-duration: .2s;
   -o-transition-duration: .2s;
   transition-duration: .2s;
-  letter-spacing: 1px;
 }
 
 .super-filter-btn:hover,
@@ -81,19 +81,13 @@
     background: none;
     border: none;
     color: #edeef0;
-    font-size: 2em;
+    font-size: 20px;
 }
 
 .frame-add-btn:hover,
 .frame-add-btn:focus {
     text-shadow: 0 0 1px #8aff37,
     0 0 10px rgba(64, 199, 57, 0.8);
-}
-
-@media screen and (min-width: 380px) {
-	.super-filter-btn {
-		width: 9em;
-	}
 }
 
 .no-schedule {
