--- a/src/components/styles/nav-bar.css
+++ b/src/components/styles/nav-bar.css
@@ -1,47 +1,46 @@
-.main-header {
+.navbar-wrapper {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 960px;
+
+    z-index: 3;
+}
+
+.navbar {
     display: flex;
     justify-content: center;
     background-color: #0b0e19;
     color: #edeef0;
     height: 50px;
-    width: 100%;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    z-index: 3;
+    margin: 0 auto;
 }
 
-.main-header-logo-wrapper {
+.navbar-logo-wrapper {
     display: flex;
+    flex: 0 0 30%;
     align-items: center;
     padding-left: 20px;
 }
 
-.main-header-logo-wrapper a {
+.navbar-logo-wrapper a {
     padding-top: 2%;
     padding-bottom: 2%;
+    font-size: 35px;
 }
 
-.main-header-logo-wrapper:hover,
-.main-header-logo-wrapper:focus {
+.navbar-logo-wrapper:hover,
+.navbar-logo-wrapper:focus {
     color: #03A9F4;
     text-shadow: 0 0 1px #03A9F4,
                  0 0 10px rgb(3, 169, 244, 0.8)
 }
 
-.main-header-logo-wrapper h1 {
+.navbar-logo-wrapper h1 {
     margin: 0;
     padding-left: 20px;
     font-size: calc(1.2rem + .9vw);
     font-style: italic;
-}
-
-.main-header-navbar {
-    flex: 0 0 80%;
-}
-
-.main-header div a {
-    font-size: 35px;
 }
 
 .fa-window-restore {
@@ -71,6 +70,11 @@ nav a.active {
                  0 0 10px rgb(3, 169, 244, 0.8)
 }
 
+.navbar-links-wrapper {
+    flex: 0 0 70%;
+    padding-right: 20px;
+}
+
 .navbar-links {
     width: 100%;
     display: flex;
@@ -94,5 +98,4 @@ nav a.active {
     border: none;
     background: transparent;
     padding: 0;
-
 }
