--- a/src/components/styles/schedule-view.css
+++ b/src/components/styles/schedule-view.css
@@ -29,23 +29,32 @@
   background: #03A9F4;
 }
 
-.view-filter h2 {
+.view-filter {
+  background-color: #0b0e19;
+}
+
+.view-filter h3 {
   font-family: Helvetica;
   font-weight: 100;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+
 }
 
 .view-filter-btns {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
+.view-filter-btns button {
+  flex: 0 0 30%;
+}
 
-@media screen and (min-width: 380px) {
-	.view-btn {
-		width: 9em;
-	}
-	.view-filter-btns{
-		flex-direction: row;
+@media screen and (min-width: 640px) {
+	.view-filter-btns button{
+      flex: 0 0 20%;
 	}
 }
