--- a/src/components/styles/employeeAvailability.css
+++ b/src/components/styles/employeeAvailability.css
@@ -1,12 +1,10 @@
 .employee-availability {
   display: flex;
-  /* flex-wrap: wrap; */
   flex-direction: column;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .employee-availability input,
 .employee-availability label {
-  /* display: flex; */
-  /* flex-direction: row-reverse; */
+  text-align: left;
 }
