--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,16 @@ body {
   height: 100%;
 }
 
+.error-msg {
+  color: #ce3d3d;
+  font-size: calc(0.5rem + 0.3vw);
+  text-align: center;
+  position: absolute;
+  top: 2.5%;
+  width: 100%;
+  text-transform: uppercase;
+}
+
 .loader,
 .loader:before,
 .loader:after {
