--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -42,6 +42,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	flex: 0 0 35%;
 }
 
 .contain {
@@ -51,10 +52,13 @@
 }
 
 .card-name, 
-.card-frame, 
 .card-time-diff {
 	font-size: 12px;
 	color: #edeef0;
+}
+
+.card-frame {
+	font-size: 10px;
 }
 
 .opt-btn {
