--- a/src/components/styles/employees.css
+++ b/src/components/styles/employees.css
@@ -28,8 +28,9 @@
     padding: 0 5% 0 5%;
     margin: 0;
     display: flex;
-    align-items: space-between;
-    flex-direction: column; 
+
+    /*align-items: space-between;*/
+    flex-direction: column;
 }
 
 .employee-section,
@@ -40,38 +41,79 @@
 
 .employee-section-details {
     display: flex;
+    flex-direction: column;
     align-items: center;
     border-bottom: 1px solid #393c50;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    font-size: 0.8em;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    /*justify-content: space-around;*/
+    /*flex-wrap: wrap;*/
 }
 
-.employee-section-details div:first-child {
-
-    text-align: left;
+.employee-profile {
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
-.employee-section-details div:last-child {
+.employee-profile-info {
+    flex: 0 0 90%;
+    align-items: center;
+}
+
+.employee-profile-edit-btn {
     flex: 0 0 10%;
     text-align: center;
 }
+
+.employee-availability {
+    width: 100%;
+}
+
+.employee-availability table {
+    text-align: center;
+}
+
+/*.employee-section-details div:first-child {*/
+/**/
+    /*text-align: left;*/
+/*}*/
+
+/*.employee-section-details div:last-child {*/
+    /*flex: 0 0 10%;*/
+    /*text-align: center;*/
+/*}*/
 
 .employee-section-details:last-child {
     border-bottom: none;
 }
 
-.employee-section h3 {
+/*.employee-section h3 {*/
+    /*margin: 0;*/
+    /*padding: 2.5% 0 2.5% 0;*/
+    /*font-size: 15px;*/
+    /*color: #edeef0;*/
+/*}*/
+
+.employee-profile-info p {
+    /*font-size: 0.8em;*/
     margin: 0;
-    padding: 2.5% 0 2.5% 0;
-    font-size: 15px;
-    color: #edeef0;
+    padding-right: 2.5%;
+    /*color: #9fa0a4;*/
 }
 
-.employee-section p {
-    font-size: 0.8em;
-    margin: 0;
-    padding: 0 0 2.5% 0;
-    color: #9fa0a4;
+.employee-profile-info div {
+    display: inline-block;
+}
+
+.employee-profile-info-name {
+    display: inline-block;
+
+    /*flex: 0 0 30%;*/
+    width: 30%;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .employee-add-btn {
