Fixed availability styles and removed default values on filter

--- a/src/components/styles/employees.css
+++ b/src/components/styles/employees.css
@@ -95,9 +95,9 @@
     text-align: center;
 }
 
-.employee-availability table {
+/* .employee-availability table {
     margin: 0 auto;
-}
+} */
 
 .employee-section-details:last-child {
     border-bottom: none;
