--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -179,6 +179,13 @@ fieldset {
     padding: 0 !important;
 }
 
+.demo-btn {
+    border: none;
+    background: none;
+    color: #03A9F4;
+    font-size: 11px;
+}
+
 /* ========================================================================================================= */
 /* SIGN UP */
 .sign-up-link {
